kubernetes/spark-history-server-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: spark-history-server
spec:
  replicas: 1
  selector:
    matchLabels:
      component: spark-history-server
  template:
    metadata:
      labels:
        component: spark-history-server
    spec:
      restartPolicy: Always
      volumes: 
        - name: spark-event-storage-volume
          persistentVolumeClaim:
            claimName: spark-event-storage-pvc
      containers:
        - name: spark-history-server
          image: spark-hadoop:3.2.0
          imagePullPolicy: Never
          command: ["/spark-history-server"]
          ports:
            - containerPort: 18080
          volumeMounts:
            - mountPath: "/data/spark-events"
              name: spark-event-storage-volume
          resources:
            requests:
              cpu: 100m
