kubernetes/spark-master-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: spark-master
spec:
  ports:
    - name: spark
      port: 7077
      targetPort: 7077
    - name: spark-master-webui
      port: 8080
      targetPort: 8080
  selector:
    component: spark-master
