kubernetes/minikube-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minikube-ingress
  annotations:
spec:
  rules:
  - host: spark-master-ui
    http:
      paths:
        - path: /
          pathType: Prefix  
          backend:
            service:
              name: spark-master
              port:
                number: 8080
  - host: spark-history-ui
    http:
      paths: 
        - path: /
          pathType: Prefix  
          backend:
            service:
              name: spark-history-server
              port:
                number: 18080
